Working on bytecode manipulation